<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">MM Dairy</string>
    <string name="c_mobile_no">Mobile No.</string>
    <string name="c_name">Name</string>
    <string name="c_save">SAVE</string>
    <string name="d_enter_id">Enter ID</string>
    <string name="d_select_date">Select Date</string>
    <string name="d_get_name">Get Name</string>
    <string name="d_name">\tName</string>
    <string name="d_select_litre">Select Litre</string>
    <string name="d_select_price">Select Price</string>
    <string name="d_litre_spinner">Litre</string>
    <string name="d_price_spinner">Price</string>
    <string name="d_submit">Submit</string>
    <string name="p_enter_id">Enter ID</string>
    <string name="p_select_any_date_for_data">Select any Date for DATA</string>
    <string name="p_get_data">Get Data</string>
    <string name="p_get_pdf">Get PDF</string>
    <string name="s_enter_litre_for_add">Enter Litre for Add</string>
    <string name="s_enter_price_for_add">Enter Price for Add</string>
    <string name="s_add_litre">ADD LITRE</string>
    <string name="s_add_price">ADD PRICE</string>
    <string name="s_enter_litre_for_delete">Enter Litre for Delete</string>
    <string name="s_enter_price_for_delete">Enter Price for Delete</string>
    <string name="s_delete_litre">DELETE LITRE</string>
    <string name="s_delete_price">DELETE PRICE</string>
    <string name="s_your_set_price">Your Set Litre</string>
    <string name="s_your_set_litre">Your Set Price</string>
    <string name="s_label">Set Litre and Price</string>
    <string name="p_label">View and Print PDF</string>
    <string name="d_label">Daily Milk</string>
    <string name="c_label">New Customer</string>
    <string name="sms_send">SEND</string>
    <string name="write_a_message">Write a Message</string>
    <string name="sm_label">Send Message</string>
    <string name="sm_er">Please enter the Message</string>
    <string name="c_er1">Please enter the Name</string>
    <string name="c_er2">Please enter valid 10 digit Phone Number</string>
    <string name="m_er1">Please enter the ID</string>
    <string name="m_er2">\tName :\t</string>
    <string name="m_er3">Please enter the ID</string>
    <string name="p_er1">PDF generated.</string>
    <string name="sp_er1">Please enter the value of Litre.</string>
    <string name="sp_er2">Please enter the value of Price.</string>
    <string name="spl">\tLiters :\t</string>
    <string name="spp">\tPrices :\t</string>
    <string name="smt">Message sent to all</string>
    <string name="ctt">\tAdded</string>
    <string name="English">English</string>
    <string name="Gujarati">Gujarati</string>
    <string name="vdw">Are you sure you want to delete?</string>
    <string name="vd">Delete Customer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="de">Deleted</string>
    <string name="delete">Delete</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="alert">Alert</string>
    <string name="exit">Are you sure you want to exit app?</string>
</resources>