<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".milkActivity">

    <TextView
        android:id="@+id/Date"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="99dp"
        android:gravity="center"
        android:hint="@string/d_select_date"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/getid"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="61dp"
        android:background="@drawable/border_on_box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/d_enter_id"
        android:inputType="textPersonName"
        android:textColor="#0B0B0B"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setname"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="61dp"
        android:gravity="center|center_vertical"
        android:hint="@string/d_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getid" />

    <TextView
        android:id="@+id/textDATA"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/d_select_litre"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setname" />

    <Spinner
        android:id="@+id/litre"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/d_litre_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDATA" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/d_select_price"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setname" />

    <Spinner
        android:id="@+id/price"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="61dp"
        android:contentDescription="@string/d_price_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/litre"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/submit"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="161dp"
        android:background="#ef4041"
        android:gravity="center"
        android:text="@string/d_submit"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/litre" />


</androidx.constraintlayout.widget.ConstraintLayout>