<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customerActivity">


    <TextView
        android:id="@+id/save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="156dp"
        android:background="#ef4041"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/c_save"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileno" />

    <EditText
        android:id="@+id/name"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="91dp"
        android:background="@drawable/border_on_box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/c_name"
        android:inputType="textPersonName"
        android:textColor="#0B0B0B"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mobileno"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="91dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/c_mobile_no"
        android:inputType="phone"
        android:background="@drawable/border_on_box"
        android:textColor="#0B0B0B"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />


</androidx.constraintlayout.widget.ConstraintLayout>