<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pdfActivity">


    <EditText
        android:id="@+id/getidpdf"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="116dp"
        android:background="@drawable/border_on_box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/p_enter_id"
        android:inputType="textPersonName"
        android:textColor="#0B0B0B"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sDATE"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="116dp"
        android:gravity="center"
        android:text="@string/p_select_any_date_for_data"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getidpdf" />

    <TextView
        android:id="@+id/getDATA"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="223dp"
        android:layout_marginBottom="23dp"
        android:background="#ef4041"
        android:gravity="center"
        android:text="@string/p_get_data"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sDATE" />

    <TextView
        android:id="@+id/getpdf"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="23dp"
        android:background="#ef4041"
        android:gravity="center"
        android:text="@string/p_get_pdf"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sDATE" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_marginTop="290dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="440dp"
            android:background="#93938C"
            android:touchscreenBlocksFocus="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/showDATA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>